[gd_scene load_steps=10 format=2]

[ext_resource path="res://AbilityButton.gd" type="Script" id=1]
[ext_resource path="res://MINECRAFTIA-REGULAR.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Art/ui-squareRobocop.png" type="Texture" id=3]
[ext_resource path="res://Outline.tscn" type="PackedScene" id=4]
[ext_resource path="res://Selection.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/ui-squareRobocopBW.png" type="Texture" id=6]
[ext_resource path="res://Art/ui-square.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 4
font_data = ExtResource( 2 )

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_intensity = 1.0
glow_strength = 0.95
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="AbilityButton" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -621.0
margin_bottom = -1225.0
texture = ExtResource( 7 )
script = ExtResource( 1 )
texture_color = ExtResource( 3 )
texture_BW = ExtResource( 6 )
run = 2.0
cooldown = 3.0

[node name="Sweep" type="TextureProgress" parent="."]
modulate = Color( 0.105882, 0.105882, 0.105882, 0.682353 )
anchor_right = 1.0
anchor_bottom = 1.0
fill_mode = 4

[node name="RunTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Counter" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -7.0

[node name="Value" type="Label" parent="Counter"]
margin_right = 15.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 1 )
text = "0.0"
align = 1
valign = 2

[node name="Outline" parent="." instance=ExtResource( 4 )]

[node name="Selection" parent="." instance=ExtResource( 5 )]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[connection signal="timeout" from="RunTimer" to="." method="_on_RunTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
